tests/interp/bad/a-in-canned-cycle.ngc
;Cannot put an a in canned cycle
g81 x0 y0 z-1 r0 f12
a90
